<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CherryQuill</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">NAME</string>
    <string name="title_activity_write">WriteActivity</string>
    <string name="compose">COMPOSE NEW</string>
    <string name="enter">Enter Your Name</string>
    <string name="write">Please fill the following details to proceed:</string>
    <string name="title">TITLE</string>
    <string name="genre">GENRE</string>
    <string name="h1">enter title here</string>
    <string name="h2">enter genre here</string>
    <string name="story">YOUR STORY</string>
    <string name="start">Start typing here...</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="text1">TEXT TO SPEECH</string>
    <string name="next">PROCEED TO READ</string>
    <string name="load">LOAD STORY</string>
    <string name="read1">Tap to load story</string>

</resources>
